--- a/index.html
+++ b/index.html
@@ -6,11 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elecar</title>
     <!--   fonts css  -->
-    <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="./styles/fonts.css" />
     <!-- main css  -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    
+    <!-- ------ Header started ------ -->
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <a href="#" class="nav__logo">
+            <img src="./images/Logo.svg" alt="logo" />
+          </a>
+
+          <ul class="nav__list">
+            <li class="nav__list--item">
+              <a href="#" class="nav__list--item-link">Home</a>
+            </li>
+            <li class="nav__list--item">
+              <a href="#" class="nav__list--item-link">About</a>
+            </li>
+            <li class="nav__list--item">
+              <a href="#" class="nav__list--item-link">Popular</a>
+            </li>
+            <li class="nav__list--item">
+              <a href="#" class="nav__list--item-link">Featured</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- ----- Header end ------ -->
+
+    <main>
+        <!-- Intro section start -->
+      <section class="intro">
+        <div class="container">
+          <div class="wrapper">
+            <h1 class="intro__title">Choose The Best Car</h1>
+            <h3 class="intro__subtitle">Porsche Mission E</h3>
+            <span>
+              <img src="./images/icons/ri_flashlight-fill.svg" alt="icon" />
+              <small>Electric car</small>
+            </span>
+
+            <img
+              src="./images/home-1.png"
+              srcset="./images/home-1.png, ./images/home1@2x.png"
+              alt="intro Porsche car"
+              class="intro__car"
+            />
+
+            <div class="intro__info">
+              <div class="intro__info--item">
+                <img src="./images/icons/Icon.svg" alt="icon" />
+                <p class="text">24°</p>
+                <p class="info__text">TEMPERATURE</p>
+              </div>
+
+              <div class="intro__info--item">
+                <img src="./images/icons/Icon2.svg" alt="icon" />
+                <p class="text">24°</p>
+                <p class="info__text">TEMPERATURE</p>
+              </div>
+
+              <div class="intro__info--item">
+                <img src="./images/icons/Icon3.svg" alt="icon" />
+                <p class="text">24°</p>
+                <p class="info__text">TEMPERATURE</p>
+              </div>
+
+              <div class="intro__start">
+                <h2>START</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ---  Intro section finished ---- -->
+    </main>
   </body>
 </html>
