--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           <ul class="nav__list">
             <li class="nav__list--item">
-              <a href="#" class="nav__list--item-link">Home</a>
+              <a href="#" class="nav__list--item-link active">Home</a>
             </li>
             <li class="nav__list--item">
               <a href="#" class="nav__list--item-link">About</a>
@@ -77,9 +77,9 @@
                 <p class="info__text">TEMPERATURE</p>
               </div>
 
-              <div class="intro__start">
-                <h2>START</h2>
-              </div>
+            </div>
+            <div class="intro__start">
+              <h2>START</h2>
             </div>
           </div>
         </div>
