added style about and section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- ----- Header end ------ -->
 
     <main>
-        <!-- Intro section start -->
+      <!-- Intro section start -->
       <section class="intro">
         <div class="container">
           <div class="wrapper">
@@ -76,7 +76,6 @@
                 <p class="text">24°</p>
                 <p class="info__text">TEMPERATURE</p>
               </div>
-
             </div>
             <div class="intro__start">
               <h2>START</h2>
@@ -85,6 +84,45 @@
         </div>
       </section>
       <!-- ---  Intro section finished ---- -->
+
+      <!-- About section started -->
+      <section class="about">
+        <div class="container">
+          <div class="about__section">
+            <div class="about__img">
+              <img
+                src="./images/about1.jpg"
+                srcset="./images/about1.jpg, ./images/about1@2x.jpg"
+                alt="image"
+              />
+              <div class="about__hover">
+                <h3 class="about__hover--title">2.500+</h3>
+                <p class="about__hover--info">
+                  Supercharges placed along popular routes
+                </p>
+              </div>
+            </div>
+
+            <div class="about__info">
+              <h3 class="about__info--title">
+                Machines With Future Technology
+              </h3>
+              <p class="about__info--text">
+                See the future with high-performance electric cars produced by
+                renowned brands. They feature futuristic builds and designs with
+                new and innovative platforms that last a long time.
+              </p>
+              <button class="about__btn">
+                Know more
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- About section finished -->
+
+      <section class="popular"></section>
     </main>
   </body>
 </html>
