Add stayle popular section

--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
                 renowned brands. They feature futuristic builds and designs with
                 new and innovative platforms that last a long time.
               </p>
-              <button class="about__btn">
-                Know more
-              </button>
+              <button class="about__btn">Know more</button>
             </div>
           </div>
         </div>
@@ -122,7 +120,248 @@
 
       <!-- About section finished -->
 
-      <section class="popular"></section>
+      <!-- Popular section started -->
+
+      <section class="popular">
+        <div class="container popular__container">
+          <h2 class="popular__title">
+            Choose Your Electric Car Of The Porsche Brand
+          </h2>
+
+          <ul class="popular__cards">
+            <li class="popular__card">
+              <h4 class="popular__card--title">Porsche</h4>
+              <p class="popular__card--text">Turbo S</p>
+              <img
+                src="./images/brand1.png"
+                srcset="./images/brand1.png, ./images/brand1@2x.png"
+                alt=""
+                class="popular__card--img"
+              />
+              <div class="popular__card--info">
+                <span class="popular__card--info-desc"
+                  ><img
+                    src="./images/icons/ri_dashboard-3-line.svg"
+                    alt=""
+                  />3.7 Sec</span
+                >
+                <span class="popular__card--info-desc"
+                  ><img src="./images/icons/diagram.png" alt="" />356 Km/h</span
+                >
+                <span class="popular__card--info-desc"
+                  ><img src="./images/icons/charge.svg" alt="" />Electric</span
+                >
+              </div>
+              <p class="popular__card--price">$175,900</p>
+
+              <div class="popular__shopping--wrapper">
+                <img src="./images/icons/shopping.svg" alt="shopping icon" />
+              </div>
+            </li>
+
+            <li class="popular__card">
+              <h4 class="popular__card--title">Porsche</h4>
+              <p class="popular__card--text">Taycan</p>
+              <img
+                src="./images/Porsche-Taycan01.png"
+                srcset="
+                  ./images/Porsche-Taycan01.png,
+                  ./images/Porsche-Taycan01@2x.png
+                "
+                alt=""
+                class="popular__card--img"
+              />
+              <div class="popular__card--info">
+                <span class="popular__card--info-desc"
+                  ><img src="./images/icons/ri_dashboard-3-line.svg" alt="" />
+                  3.7 Sec</span
+                >
+                <span class="popular__card--info-desc"
+                  ><img src="./images/icons/diagram.png" alt="" /> 356
+                  Km/h</span
+                >
+                <span class="popular__card--info-desc"
+                  ><img src="./images/icons/charge.svg" alt="" />Electric</span
+                >
+              </div>
+              <p class="popular__card--price">$114,900</p>
+
+              <div class="popular__shopping--wrapper">
+                <img src="./images/icons/shopping.svg" alt="shopping icon" />
+              </div>
+            </li>
+
+            <li class="popular__card">
+              <h4 class="popular__card--title">Porsche</h4>
+              <p class="popular__card--text">Turbo S Cross</p>
+              <img
+                src="./images/brand3.png"
+                srcset="./images/brand3.png, ./images/brand3@2x.png"
+                alt=""
+                class="popular__card--img"
+              />
+              <div class="popular__card--info">
+                <span class="popular__card--info-desc"
+                  ><img
+                    src="./images/icons/ri_dashboard-3-line.svg"
+                    alt=""
+                  />3.7 Sec</span
+                >
+                <span class="popular__card--info-desc"
+                  ><img src="./images/icons/diagram.png" alt="" />356 Km/h</span
+                >
+                <span class="popular__card--info-desc"
+                  ><img src="./images/icons/charge.svg" alt="" />Electric</span
+                >
+              </div>
+              <p class="popular__card--price">$175,900</p>
+
+              <div class="popular__shopping--wrapper">
+                <img src="./images/icons/shopping.svg" alt="shopping icon" />
+              </div>
+            </li>
+          </ul>
+
+          <span class="dots"
+            ><img src="./images/icons/Carpopularndicator.svg" alt="nuqtalar"
+          /></span>
+        </div>
+      </section>
+
+      <!-- Popular finished -->
+
+      <!-- Feature section started -->
+
+      <section class="feature">
+        <div class="container feature__container">
+          <h2 class="feature__title">More Features</h2>
+          <div class="feature__bg">
+            <img src="./images/Map.png" alt="map" class="bg__image" />
+            <img
+              src="./images/featured-car.png"
+              srcset="./images/featured-car.png, ./images/featured-car@2x.png"
+              alt="car"
+              class="car__image"
+            />
+            <span class="feature__hover"></span>
+            <span class="feature__hover"></span>
+            <span class="feature__hover"></span>
+          </div>
+        </div>
+      </section>
+
+      <!-- Feature section finished -->
+
+      <section class="cars">
+        <div class="container">
+          <div class="cars__section">
+            <h3 class="cars__title">Featured Luxury Cars</h3>
+            <ul class="car__logos">
+              <li class="car__logos--item">All</li>
+              <li class="car__logos--item">
+                <img src="./images/icons/teslalogo.svg" alt="tesla logo" />
+              </li>
+              <li class="car__logos--item">
+                <img src="./images/icons/logo2.svg" alt="audi logo" />
+              </li>
+              <li class="car__logos--item">
+                <img src="./images/icons/logo1.svg" alt="" />
+              </li>
+            </ul>
+            <ul class="luxury__cars">
+              <li class="popular__card luxury__card">
+                <h4 class="popular__card--title">Porsche</h4>
+                <p class="popular__card--text">Taycan</p>
+                <img
+                  src="./images/Porsche-Taycan01.png"
+                  srcset="
+                    ./images/Porsche-Taycan01.png,
+                    ./images/Porsche-Taycan01@2x.png
+                  "
+                  alt=""
+                  class="popular__card--img"
+                />
+                <p class="popular__card--price">$114,900</p>
+                <div class="popular__shopping--wrapper">
+                  <img src="./images/icons/shopping.svg" alt="shopping icon" />
+                </div>
+              </li>
+
+              <li class="popular__card luxury__card">
+                <h4 class="popular__card--title">Porsche</h4>
+                <p class="popular__card--text">Taycan</p>
+                <img
+                  src="./images/Porsche-Taycan01.png"
+                  srcset="
+                    ./images/Porsche-Taycan01.png,
+                    ./images/Porsche-Taycan01@2x.png
+                  "
+                  alt=""
+                  class="popular__card--img"
+                />
+                <p class="popular__card--price">$114,900</p>
+                <div class="popular__shopping--wrapper">
+                  <img src="./images/icons/shopping.svg" alt="shopping icon" />
+                </div>
+              </li>
+
+              <li class="popular__card luxury__card">
+                <h4 class="popular__card--title">Porsche</h4>
+                <p class="popular__card--text">Taycan</p>
+                <img
+                  src="./images/Porsche-Taycan01.png"
+                  srcset="
+                    ./images/Porsche-Taycan01.png,
+                    ./images/Porsche-Taycan01@2x.png
+                  "
+                  alt=""
+                  class="popular__card--img"
+                />
+                <p class="popular__card--price">$114,900</p>
+                <div class="popular__shopping--wrapper">
+                  <img src="./images/icons/shopping.svg" alt="shopping icon" />
+                </div>
+              </li>
+
+              <li class="popular__card luxury__card">
+                <h4 class="popular__card--title">Porsche</h4>
+                <p class="popular__card--text">Taycan</p>
+                <img
+                  src="./images/Porsche-Taycan01.png"
+                  srcset="
+                    ./images/Porsche-Taycan01.png,
+                    ./images/Porsche-Taycan01@2x.png
+                  "
+                  alt=""
+                  class="popular__card--img"
+                />
+                <p class="popular__card--price">$114,900</p>
+                <div class="popular__shopping--wrapper">
+                  <img src="./images/icons/shopping.svg" alt="shopping icon" />
+                </div>
+              </li>
+
+              <li class="popular__card luxury__card">
+                <h4 class="popular__card--title">Porsche</h4>
+                <p class="popular__card--text">Taycan</p>
+                <img
+                  src="./images/Porsche-Taycan01.png"
+                  srcset="
+                    ./images/Porsche-Taycan01.png,
+                    ./images/Porsche-Taycan01@2x.png
+                  "
+                  alt=""
+                  class="popular__card--img"
+                />
+                <p class="popular__card--price">$114,900</p>
+                <div class="popular__shopping--wrapper">
+                  <img src="./images/icons/shopping.svg" alt="shopping icon" />
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
